[package]
name = "proy"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4"
cfg-if = "0.1"
[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","processthreadsapi","synchapi","sysinfoapi"] }
kernel32-sys = "0.2"